Enhance README and GitHub Actions workflow: clarify SSH key requirements in README and update deployment steps to use ssh-agent for improved security.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,14 +76,17 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
     
-    - name: Deploy to EC2
-      uses: appleboy/ssh-action@master
+    - name: Install SSH key
+      uses: webfactory/ssh-agent@v0.8.0
       with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        passphrase: ${{ secrets.EC2_SSH_PASSPHRASE }}
-        script: |
+        ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+    
+    - name: Add host key to known hosts
+      run: ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+    
+    - name: Deploy to EC2
+      run: |
+        ssh ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'ENDSSH'
           # Pull the latest image
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
           docker pull ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
@@ -93,4 +96,5 @@ jobs:
           docker rm fastapi-app || true
           
           # Run the new container
-          docker run -d --name fastapi-app -p 80:8000 ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }} 
+          docker run -d --name fastapi-app -p 80:8000 ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
+        ENDSSH 
